--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+#main {
+  position: relative;
+}
 #main h1 {
   font-size: 58px;
   margin-top: 5%;
@@ -11,9 +14,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 115vh;
+  height: 100vh;
   color: white;
 }
+
 
 #about {
   background: green;
