--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,15 @@
   position: relative;
 }
 #main h1 {
-  font-size: 58px;
-  margin-top: 5%;
+  font-size: 68px;
+  margin: 0;
+  /* margin-top: 5%; */
 }
+
+#main h2 {
+  font-size: 38px;
+}
+
 
 #main p {
   width: 855px;
@@ -18,6 +24,22 @@
   color: white;
 }
 
+#home #name {
+  text-align: center;
+  position: fixed;
+  top: 30%;
+}
+
+#temp-links {
+  display: flex;
+  justify-content: center;
+}
+
+#temp-links a {
+  font-size: 34px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
 
 #about {
   background: green;
