--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -6,11 +6,11 @@ img, section, header {
   background: transparent;
   font-weight: normal;
   font-size: 20px;
-  font-family: fantasy;
+  font-family: 'Amatic SC', cursive;
+  font-weight: 700;
   text-decoration: none;
   list-style: none;
   list-style-type: none;
-  display: block;
   color: inherit;
 }
 
