--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,7 @@
 #home #name {
   text-align: center;
   position: absolute;
-  top: 30%;
+  top: 25%;
 }
 
 #name h2 {
@@ -17,6 +17,24 @@
 
 #name a:hover {
   /* outline: 1px solid yellow; */
-  text-decoration: underline; 
-   box-shadow:1px 1px 7px 1px yellow;
+  text-decoration: underline;
+  -webkit-animation: outliner 2.5s infinite;
+  animation: outliner 2.5s infinite;
+}
+
+@-webkit-keyframes outliner {
+  50% {
+    /* color: rgba(255, 255, 0, 0.75); */
+    background: rgba(255, 255, 0, 0.1);
+    box-shadow:1px 1px 13px 1px rgba(255, 255, 0, 1.0);
+  }
+}
+
+@keyframes outliner {
+  50% {
+    /* color: rgba(255, 255, 0, 0.75); */
+    background: rgba(255, 255, 0, 0.1);
+    box-shadow:1px 1px 13px 1px rgba(255, 255, 0, 1.0);
+  }
+
 }
