--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,13 +3,12 @@
   flex-direction: column;
   align-items: center;
   height: 115vh;
-  color: white;
   position: relative;
 }
 
 #main h1 {
   font-size: 128px;
-  margin: 0;
+  margin-top: 60px;
 }
 
 #main h2 {
@@ -19,8 +18,6 @@
 #main p {
   width: 855px;
 }
-
-
 
 #portfolio {
   background: red;
