--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -9,8 +9,13 @@
   justify-content: center;
 }
 
+#contact-info {
+  margin-top: 30px;
+}
+
 #contact-links a {
-  font-size: 34px;
+  font-size: 38px;
+  margin-top: 30px;
   margin-right: 10px;
   margin-left: 10px;
 }
