Add styling to nav bar based on Y offset of page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,3 +26,15 @@
 #music {
   background: green;
 }
+
+.highlight {
+  color: rgba(255, 255, 0, 1.0);
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
+}
+
+/* .unhighlight {
+  color: white;
+  -webkit-transition: 1.5s;
+  transition: 1.5s;
+} */
