--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -19,3 +19,12 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+
+#contact-links a:hover {
+  color: rgba(255, 255, 0, 1.0);
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  font-size: 48px;
+  /* -webkit-animation: colorer 2.3s;
+  animation: colorer 2.3s; */
+}
