--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 115vh;
+  height: 110vh;
   position: relative;
 }
 
@@ -16,7 +16,11 @@
 }
 
 #main p {
-  width: 855px;
+  width: 500px;
+  font-family: 'Muli', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #portfolio {
@@ -26,15 +30,3 @@
 #music {
   background: green;
 }
-
-.highlight {
-  color: rgba(255, 255, 0, 1.0);
-  -webkit-transition: 1.2s;
-  transition: 1.2s;
-}
-
-/* .unhighlight {
-  color: white;
-  -webkit-transition: 1.5s;
-  transition: 1.5s;
-} */
