--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -2,6 +2,7 @@
   background: black;
   height: 100vh;
   color: white;
+  font-weight: 700;
 }
 
 #contact-links {
@@ -15,7 +16,7 @@
 
 #contact-links a {
   font-size: 38px;
-  margin-top: 30px;
+  margin-top: 10px;
   margin-right: 10px;
   margin-left: 10px;
 }
@@ -25,6 +26,4 @@
   -webkit-transition: 0.6s;
   transition: 0.6s;
   font-size: 48px;
-  /* -webkit-animation: colorer 2.3s;
-  animation: colorer 2.3s; */
 }
