--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -18,6 +18,15 @@
 #about a {
   font-size: 26px;
   text-decoration: underline;
+  font-family: 'Amatic SC', cursive;
+}
+
+#about p {
+  width: 500px;
+  font-family: 'Muli', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #about a:hover {
