--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@ section {
   flex-direction: column;
   align-items: center;
   height: 110vh;
+  min-width: 700px;
 }
 
 @media screen and (max-height: 740px) {
@@ -23,6 +24,8 @@ section {
 }
 
 #main h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-family: 'Muli', sans-serif;
 }
 
