--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,9 +24,9 @@ section {
 }
 
 #main h3 {
+  font-size: 28px;
   margin-top: 30px;
   margin-bottom: 10px;
-  font-family: 'Muli', sans-serif;
 }
 
 #music {
