--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -9,7 +9,6 @@
   grid-template-rows: 270px 270px;
   grid-column-gap: 5px;
   grid-row-gap: 5px;
-  /* display: flex; */
 }
 
 #projects-list li {
@@ -18,7 +17,6 @@
 
 #projects-list div {
   font-family: 'Muli', sans-serif;
-  /* background: rgba(203, 231, 226, 0.0); */
   color: rgba(255, 255, 255, 0.0);
   height: 270px;
   position: absolute;
@@ -32,9 +30,12 @@
   width: 330px;
 }
 
+#projects-list p {
+  margin-bottom: 20px;
+}
+
 #projects-list li:hover div {
   visibility: visible;
-  /* background: rgba(203, 231, 226, 0.7); */
   color: rgba(255, 255, 255, 1.0);
   background: rgba(0, 0, 0, 1.0);
   transition: 1s;
@@ -43,4 +44,24 @@
 #projects-list img {
   height: 270px;
   width: 330px;
+}
+
+#projects-list a {
+  font-size: 32px;
+  text-decoration: underline;
+  font-family: 'Amatic SC', cursive;
+}
+
+#projects-list a:hover {
+  font-weight: 400;
+  font-style: italic;
+  color: rgba(255, 255, 0, 1.0);
+}
+
+#coming-soon {
+  width: 500px;
+  font-family: 'Muli', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
