--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,10 +1,14 @@
 #contact {
   background: black;
   height: 100vh;
-  min-height: 500px;
+  min-height: 550px;
   color: white;
   font-weight: 700;
   position: relative;
+}
+
+#contact em{
+  color: rgba(255, 255, 0, 1.0);
 }
 
 #contact-links {
